# PRIN2_backend

biblioteca/: db.sqlite3  pyproject.toml
biblioteca/biblioteca/: admin.py  models.py  serializers.py  views.py
biblioteca/biblioteca/migrations/: 0001_initial.py
biblioteca/config/: settings.py  urls.py
etapa_03/: README.md
projeto_01/backend/: pyproject.toml
projeto_01/backend/alunos/: admin.py  models.py  serializers.py  views.py
projeto_01/backend/alunos/migrations/: 0001_initial.py  0002_cidade.py  0003_aluno.py
projeto_01/backend/config/: settings.py  urls.py
